--- a/src/main/webapp/WEB-INF/views/layout/tiles.xml
+++ b/src/main/webapp/WEB-INF/views/layout/tiles.xml
@@ -33,11 +33,7 @@
 	<put-attribute name="content" value="/WEB-INF/views/cls/{1}.jsp" />
 </definition>
 
-<definition name="recCls/*" extends="defaultlayout">
-	<put-attribute name="content" value="/WEB-INF/views/cls/{1}.jsp" />
-</definition>
-
-<definition name="bestCls/*" extends="defaultlayout">
+<definition name="defaultCls/*" extends="defaultlayout">
 	<put-attribute name="content" value="/WEB-INF/views/cls/{1}.jsp" />
 </definition>
 
