--- a/src/main/webapp/resources/css/category.css
+++ b/src/main/webapp/resources/css/category.css
@@ -1,31 +1,131 @@
 @charset "UTF-8";
 
+#menu .nav-pills .nav-link.active, #menu .nav-pills .show>.nav-link {
+    background-color: rgb(0,0,0,0);
+    color: red !important;
+}
+.cls-h1 {
+	font-size: 36px;
+}
+
 /* clslist */
-.clslist-grid {
+.clslist {
 	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 3rem;
 	text-align: left;
 }
-.clslist-title {
-	padding-left: 1rem;
-	padding-bottom: 2rem;
+.clslist p {
+	margin-bottom: 0;
 }
-.clslist-ul {
+.clslist h2 {
+	margin-left: 188px;
+	padding-left: 1rem;
+    font-size: 25px;
+    font-weight: bold;
+    color: #3f3e3d;
+}
+.clslist ul {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	padding-left: 0!important;
+	margin-bottom: 0!important;
 }
-.clslist-li {
-	flex-basis: 25%;
+.clslist li {
+	flex-basis: 33.3%;
 	padding-right: 1rem;
 	padding-left: 1rem;
-	margin-bottom: 1.5rem;
+	margin-top: 1.5rem;
 }
-.clslist-fig {
+.clslist .cls-more {
+	display: block;
+    margin-top: 0.3rem;
+    margin-right: 2%;
+    font-size: 1rem;
+    text-align: right;
+}
+.clslist .cls-more > a {
+	color: #eb5a64 !important;
+}
+.clslist .cls-fig {
 	overflow: hidden;
-	border-radius: 1rem;
-	width: 260px;
-	height: 160px;
+	border-radius: 0.5rem;
+	width: 270px;
+    height: 170px;
+	margin-bottom: 0.7rem;
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
 	background-color: gray;
+	position: relative;
+}
+.clslist .cls-fig > img {
+	width: 100%;
+	height: 100%;
+    object-fit: cover;
+}
+.clslist .cls-tag {
+	width: 95%;
+    display: flex;
+    position: relative;
+    align-items: center;
+    margin-bottom: 0.6rem;
+    flex-direction: row;
+}
+.clslist .tag-category {
+	min-width: 2rem;
+    height: 24px;
+    padding: 0 12px;
+    margin-right: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 20px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: 13px;
+    color: #646260;
+    background-color: #E7E7E7;
+}
+.clslist .cls-title {
+	font-weight: 600;
+	font-size: 17px;
+	line-height: 24px;
+}
+.clslist .cls-id {
+	display: flex;
+    margin-top: 7px;
+    margin-left: 2px;
+}
+.clslist .cls-id .cls-profile {
+	margin-right: 6px;
+    flex-direction: row;
+    max-width: 24px;
+    max-height: 24px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    font-size: 1.25rem;
+    align-items: center;
+    flex-shrink: 0;
+    line-height: 1;
+    user-select: none;
+    border-radius: 50%;
+    justify-content: center;
+    background-color: #e7e7e7;
+}
+.clslist .cls-id .cls-profile > img {
+	color: transparent;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    text-align: center;
+}
+.clslist .cls-id > p {
+	font-size: 14px;
+    color: #666;
 }
