--- a/src/main/webapp/resources/css/layout.css
+++ b/src/main/webapp/resources/css/layout.css
@@ -1,9 +1,31 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-style: normal;
+}
+@font-face {
+	font-family: 'BMHANNAPro';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.0/BMHANNAPro.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+/* font */
+.font-BM {
+	font-family: "BMHANNAPro";
+}
+
 *{
 	margin: 0;
 	padding: 0;
 	border: 0;
+}
+body {
+	font-family: "Pretendard-Regular";
+	font-weight: 400;
 }
 ul, ol, li {
     list-style: none;
@@ -17,6 +39,17 @@ a:hover {
 }
 
 /* header */
+.header-area {
+	width: 100%;
+	height: 128px;
+	display: grid;
+}
+.header {
+	width: 100%;
+	position: fixed;
+	background-color: #F8EEE1;
+	z-index: 10000;
+}
 .header-top {
 	max-width: 1200px;
 	margin-left: auto;
@@ -30,7 +63,7 @@ a:hover {
 	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
-	padding-bottom: 5px;
+	padding-left: 16px;
 	font-weight: 600;
 }
 .header-right {
@@ -38,10 +71,60 @@ a:hover {
 	display: flex;
 	position: absolute;
 }
-.form-control {
-    border-radius: 10rem !important;
+.header-bottom .navbar-expand-lg .navbar-nav {
+    flex-direction: row;
 }
-#search {
+.header-bottom .navbar-expand-lg .navbar-nav .dropdown-menu {
+    position: absolute;
+}
+.header-bottom .navbar-expand-lg .navbar-collapse {
+    display: flex!important;
+    flex-basis: auto;
+}
+.header-bottom .container-fluid {
+    padding-right: 0;
+    padding-left: 0;
+}
+.header-bottom .navbar-expand-lg .navbar-nav .nav-link {
+    padding-right: 2.8rem;
+    padding-left: 0;
+}
+.header-bottom .dropdown-menu {
+	min-width: 130px;
+	margin-top: 0.5rem;
+	border: 1px solid #d7d7d7;
+    border-radius: 0;
+    opacity: 0.85;
+}
+.header-bottom .dropdown-menu::before {
+	position: absolute;
+    top: -1px;
+    left: -1px;
+	content: "";
+    display: block;
+    width: 130px;
+    border-bottom: 2px solid #f76b5c;
+    opacity: 1;
+}
+.header-bottom .dropdown-item:active {
+	background-color: #dddddd;
+}
+.header-bottom .dropdown-toggle::before {
+	display: inline-block;
+    margin-right: 0.2em;
+    content: "☰";
+    border-right: 0.3em solid transparent;
+    border-left: 0.3em solid transparent;
+}
+.header-bottom .dropdown-toggle::after {
+	content: none;
+}
+/* header-search */
+.search-bar > .form-control {
+    border-radius: 10rem !important;
+    font-size: 0.9rem !important;
+}
+.search-bar #search {
 	width: 300px;
 	height: 40px;
 	padding-left: 40px;
@@ -52,4 +135,26 @@ a:hover {
 	background-position: 13px center;
 	border-style: none;
 	font-size: 15px;
+}
+.search-bar #search:focus {
+	box-shadow: 0 1px 5px rgba(0,0,0,0.10), 0 1px 5px rgba(0,0,0,0.2);
+}
+
+/* footer */
+.footer {
+	height: 5.2rem;
+	position: relative;
+	text-align: left;
+	background-color: #3f3e3d;
+	box-shadow: inset 0 0 0.5em rgba(0, 0, 0, .1);
+}
+.footer .container {
+	max-width: 1200px !important;
+}
+.footer .text-muted {
+	color: #d5d5d5 !important;
+}
+.footer .bi {
+  vertical-align: -.125em;
+  fill: currentColor;
 }
