--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,43 +1,182 @@
 @charset "UTF-8";
 
 /* carousel slider */
+.slide {
+	/* padding-top: 128px; */
+}
 .carousel-caption {
-    right: 0;
-    left: 15%;
+	text-align: left;
     padding-bottom: 40px;
-    text-align: left;
     -webkit-user-select:none;
 	-moz-user-select:none;
 	-ms-user-select:none;
 }
 
+/* category */
+.main-category {
+	display: flex;
+	justify-content: center;
+	background-color: #3F3E3D;
+	box-shadow: inset 0 0 1.5em rgba(0, 0, 0, .2);
+}
+.main-category > .category-grid {
+	grid-template-columns: repeat(8,1fr);
+	grid-template-rows: repeat(1,1fr);
+	display: grid;
+	overflow: hidden;
+	align-items: center;
+	padding: 1.5rem 0 1.2rem 0;
+}
+.main-category > .category-grid > a {
+	width: 8rem;
+}
+.main-category .img-btn {
+	display: block;
+	overflow: hidden;
+	width: 3.8rem;
+	padding-top: 10%;
+	padding-bottom: 10%;
+	margin-right: auto;
+	margin-left: auto;
+	border-radius: 1.5rem;
+	background-color: #f8eee1;
+}
+.main-category .allcls {
+	padding-top: 15%;
+	padding-bottom: 15%;
+	background: radial-gradient( #e15648 10%, #f76b5c 19px, #f76b5c 50% );
+}
+.main-category .img-btn > .icon-white {
+	filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(17deg) brightness(101%) contrast(103%);
+}
+.main-category .img-btn > img {
+	width: 35px;
+	filter: invert(39%) sepia(0%) saturate(4649%) hue-rotate(136deg) brightness(89%) contrast(118%);
+}
+.main-category .categoty-title {
+	margin-top: 0.5rem;
+	font-size: 0.9rem;
+	color: white!important;
+}
+
 /* clslist */
-.clslist-grid {
+.clslist {
 	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 4rem;
+	margin-bottom: 3rem;
 	text-align: left;
 }
-.clslist-title {
-	padding-left: 1rem;
-	padding-bottom: 2rem;
+.clslist p {
+	margin-bottom: 0;
 }
-.clslist-ul {
+.clslist h2 {
+	padding-left: 1rem;
+    font-size: 25px;
+    font-weight: bold;
+    color: #3f3e3d;
+}
+.clslist ul {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	padding-left: 0!important;
+	margin-bottom: 0!important;
 }
-.clslist-li {
+.clslist li {
 	flex-basis: 25%;
 	padding-right: 1rem;
 	padding-left: 1rem;
-	margin-bottom: 1.5rem;
+	margin-top: 1.5rem;
 }
-.clslist-fig {
+.clslist .cls-more {
+	display: block;
+    margin-top: 0.3rem;
+    margin-right: 2%;
+    font-size: 1rem;
+    text-align: right;
+}
+.clslist .cls-more > a {
+	color: #eb5a64 !important;
+}
+.clslist .cls-fig {
 	overflow: hidden;
-	border-radius: 1rem;
-	width: 260px;
-	height: 160px;
+	border-radius: 0.5rem;
+	width: 253px;
+    height: 170px;
+	margin-bottom: 0.7rem;
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
 	background-color: gray;
+	position: relative;
 }
+.clslist .cls-fig > img {
+	width: 100%;
+	height: 100%;
+    object-fit: cover;
+}
+.clslist .cls-tag {
+	width: 95%;
+    display: flex;
+    position: relative;
+    align-items: center;
+    margin-bottom: 0.6rem;
+    flex-direction: row;
+}
+.clslist .tag-category {
+	min-width: 2rem;
+    height: 24px;
+    padding: 0 12px;
+    margin-right: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 20px;
+    box-sizing: border-box;
+    border-radius: 4px;
+    font-size: 13px;
+    color: #646260;
+    background-color: #E7E7E7;
+}
+.clslist .cls-title {
+	font-weight: 600;
+	font-size: 17px;
+	line-height: 24px;
+}
+.clslist .cls-id {
+	display: flex;
+    margin-top: 7px;
+    margin-left: 2px;
+}
+.clslist .cls-id .cls-profile {
+	margin-right: 6px;
+    flex-direction: row;
+    max-width: 24px;
+    max-height: 24px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    font-size: 1.25rem;
+    align-items: center;
+    flex-shrink: 0;
+    line-height: 1;
+    user-select: none;
+    border-radius: 50%;
+    justify-content: center;
+    background-color: #e7e7e7;
+}
+.clslist .cls-id .cls-profile > img {
+	color: transparent;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    text-align: center;
+}
+.clslist .cls-id > p {
+	font-size: 14px;
+    color: #666;
+}
+
