--- a/src/main/webapp/WEB-INF/views/layout/tiles.xml
+++ b/src/main/webapp/WEB-INF/views/layout/tiles.xml
@@ -48,6 +48,11 @@
 	<put-attribute name="current" value="{1}" cascade="true"/>
 </definition>
 
+<definition name="mypagefull/*" extends="defaultlayout">
+	<put-attribute name="content" value="/WEB-INF/views/mypage/{1}.jsp" />
+	<put-attribute name="current" value="{1}" cascade="true"/>
+</definition>
+
 <!-- 강의 듣기 페이지 -->
 <definition name="lesson" template="/WEB-INF/views/layout/leslayout.jsp">
 	<put-attribute name="css" value="/resources/css/leslayout.css" />
