--- a/src/main/webapp/resources/css/layout.css
+++ b/src/main/webapp/resources/css/layout.css
@@ -51,11 +51,11 @@ a:hover {
 	z-index: 10000;
 }
 .header-top {
+	width: 100%;
 	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 	position: relative;
-	display: flex;
 	-webkit-box-align: center;
 	align-items: center;
 }
@@ -65,11 +65,6 @@ a:hover {
 	margin-right: auto;
 	padding-left: 16px;
 	font-weight: 600;
-}
-.header-right {
-	right: 0px;
-	display: flex;
-	position: absolute;
 }
 .header-bottom .navbar-expand-lg .navbar-nav {
     flex-direction: row;
